--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-all:1.10.19'
-
+    compile 'com.wdullaer:swipeactionadapter:2.0.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
