--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,24 +41,26 @@
             android:name=".Stats.StatsActivity"
             android:label="@string/fitx"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/FiTX3theme.noBar"
-             />
+            android:theme="@style/FiTX3theme.noBar" />
         <activity
             android:name=".Diet.DietActivity"
             android:label="@string/fitx"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/FiTX3theme.noBar"
-             />
+            android:theme="@style/FiTX3theme.noBar" />
         <activity
             android:name=".Training.TrainingActivity"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/FiTX3theme.noBar"
-             />
+            android:theme="@style/FiTX3theme.noBar" />
         <activity
             android:name=".Diet.DietProductShowActivity"
             android:label="@string/fitx"
+            android:parentActivityName=".Diet.DietActivity"
+            android:theme="@style/FiTX3theme.noBar" />
+        <activity android:name=".Diet.DietProductSearchActivity"
+            android:label="@string/fitx"
+            android:parentActivityName=".Diet.DietActivity"
             android:theme="@style/FiTX3theme.noBar"
-            android:parentActivityName=".Diet.DietActivity"/>
+            />
     </application>
 
 </manifest>
