--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,10 @@ dependencies {
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+//    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
