--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:design:26.1.0'
 //    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
@@ -45,5 +45,5 @@ dependencies {
     testCompile 'org.mockito:mockito-all:1.10.19'
     compile 'com.wdullaer:swipeactionadapter:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-
+    compile 'com.makeramen:roundedimageview:2.3.0'
 }
