--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,7 +77,11 @@
             android:label="@string/fitx"
             android:parentActivityName=".Training.TrainingSearchActivity"
             android:theme="@style/FiTX3theme.noBar" />
-        <activity android:name=".Training.CardioActivity"></activity>
+        <activity android:name=".Training.CardioDetailsActivity"
+            android:parentActivityName=".Training.TrainingActivity"
+            android:label="@string/fitx"
+            android:theme="@style/FiTX3theme.noBar"
+            />
     </application>
 
 </manifest>
