--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.android.application'
 android {
     signingConfigs {
     }
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.brus5.lukaszkrawczak.fitx"
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -30,24 +30,16 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:design:27.1.1'
     //    implementation 'com.google.android.gms:play-services-auth:11.8.0'
-    implementation 'com.google.android.gms:play-services-auth:15.0.1'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.jjoe64:graphview:4.2.1'
-    compile 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
-    compile 'com.github.clans:fab:1.6.4'
-    compile 'com.github.jintin:MixAdapter:1.1'
-    implementation 'com.android.support:gridlayout-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:1.10.19'
-    compile 'com.wdullaer:swipeactionadapter:2.0.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.jjoe64:graphview:4.2.1'
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.7'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
