Refactoring SettingsActivity and removing unnecessary classes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,15 +87,16 @@
             android:parentActivityName=".training.TrainingActivity"
             android:theme="@style/FiTX3theme.noBar" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".settings.list.SettingsActivity"
             android:label="@string/fitx"
             android:parentActivityName=".MainActivity"
             android:theme="@style/FiTX3theme.noBar" />
-        <activity android:name=".SettingsDetailsActivity"
+        <activity
+            android:name=".settings.SettingsDetailsActivity"
             android:label="@string/fitx"
-            android:parentActivityName=".SettingsActivity"
-            android:theme="@style/FiTX3theme.noBar"
-            />
+            android:parentActivityName=".settings.list.SettingsActivity"
+            android:theme="@style/FiTX3theme.noBar" />
+        <activity android:name=".settings.SettingsDetailsTriple"></activity>
     </application>
 
 </manifest>
