--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- SetFacebookID -->
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+        <!-- SetFacebookID --><meta-data
+        android:name="com.facebook.sdk.ApplicationId"
+        android:value="@string/facebook_app_id" />
 
         <activity
             android:name=".login.LoginActivity"
@@ -96,7 +95,8 @@
             android:label="@string/fitx"
             android:parentActivityName=".settings.list.SettingsActivity"
             android:theme="@style/FiTX3theme.noBar" />
-        <activity android:name=".settings.SettingsDetailsTriple"></activity>
+        <activity android:name=".settings.SettingsDetailsTriple" />
+        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
