--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,7 +98,8 @@
             android:parentActivityName=".settings.list.SettingsActivity"
             android:theme="@style/FiTX3theme.noBar" />
         <activity android:name=".settings.SettingsDetailsTriple" />
-        <activity android:name=".register.RegisterActivity"/>
+        <activity android:name=".register.RegisterActivity" />
+        <activity android:name=".register.RulesRegisterActivity"></activity>
     </application>
 
 </manifest>
