--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/fitx"
+            android:theme="@style/FiTX3theme.noBar" >
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/fitx"
             android:theme="@style/FiTX3theme.noBar" />
         <activity
             android:name=".stats.StatsActivity"
@@ -97,9 +102,11 @@
             android:label="@string/fitx"
             android:parentActivityName=".settings.list.SettingsActivity"
             android:theme="@style/FiTX3theme.noBar" />
-        <activity android:name=".settings.SettingsDetailsTriple" />
-        <activity android:name=".register.RegisterActivity" />
+        <activity android:name=".settings.SettingsDetailsTripleActivity"
+            android:parentActivityName=".settings.list.SettingsActivity"
+            android:theme="@style/FiTX3theme.noBar" />
         <activity android:name=".register.RulesRegisterActivity"></activity>
+        <activity android:name=".register.RegisterActivity" />
     </application>
 
 </manifest>
