Added connection status funcionality
Every Activity is starts with checking inetnet status. If status = false, then App starts new Activity with showing an error.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,11 +97,13 @@
             android:label="@string/fitx"
             android:parentActivityName=".settings.list.SettingsActivity"
             android:theme="@style/FiTX3theme.noBar" />
-        <activity android:name=".settings.SettingsDetailsTripleActivity"
+        <activity
+            android:name=".settings.SettingsDetailsTripleActivity"
             android:parentActivityName=".settings.list.SettingsActivity"
             android:theme="@style/FiTX3theme.noBar" />
-        <activity android:name=".register.RulesRegisterActivity"/>
+        <activity android:name=".register.RulesRegisterActivity" />
         <activity android:name=".register.RegisterActivity" />
+        <activity android:name=".ConnectionFailedActivity"></activity>
     </application>
 
 </manifest>
